Bug 122270 - Tabbed Notebook Bar (Impress) View (tab) Normal and Master buttons do not properly update UI when user switches view
Summary: Tabbed Notebook Bar (Impress) View (tab) Normal and Master buttons do not pro...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.2.0.1 rc
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:24.2.0
Keywords:
Depends on:
Blocks: Notebookbar-Tabbed
  Show dependency treegraph
 
Reported: 2018-12-21 17:13 UTC by Drew Jensen
Modified: 2023-06-20 23:03 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Graphic which shows issue (322.95 KB, image/png)
2020-02-24 22:15 UTC, Drew Jensen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Drew Jensen 2018-12-21 17:13:08 UTC
Test system Ubuntu 18.04.1 (AMD64), LO 6.2.0.1 RC1

To reproduce:

1 - Open any Impress file with the Tabbed Notebook Bar UI activated
2 - Switch to the View tab
3 - Click on the 'Master Slide' button

result:
The content view changes to the master slide, the notebook bar UI does not update which button now has focus. It still displays the 'Normal' button with the 3d effect, this should now be flat and the effect on 'Master Slide' button.

4 - Click on the 'Slide Sorter' button

result:
The notebook bar UI updates properly and 'Slide Sorter' has the 3d effect.

5 - Click on the 'Master Slide' button

result:
The notebook bar UI updates properly and 'Master Slide' has the 3d effect.

6 - Click on the 'Normal' button

result:
The notebook bar does not update properly and the 3d effect does not change to the proper button.
Comment 1 Roman Kuznetsov 2018-12-21 20:42:22 UTC
confirm in

Версия: 6.2.0.1
ID сборки: 0412ee99e862f384c1106d0841a950c4cfaa9df1
Потоков ЦП: 4; ОС:Linux 4.13; Отрисовка ИП: по умолчанию; VCL: gtk3; 
Локаль: ru-RU (ru_RU.UTF-8); UI-Language: ru-RU
Calc: threaded
Comment 2 Rizal Muttaqin 2020-02-24 18:39:30 UTC
(In reply to Drew Jensen from comment #0)
> Test system Ubuntu 18.04.1 (AMD64), LO 6.2.0.1 RC1
> 
> To reproduce:
> 
> 1 - Open any Impress file with the Tabbed Notebook Bar UI activated
> 2 - Switch to the View tab
> 3 - Click on the 'Master Slide' button
> 
> result:
> The content view changes to the master slide, the notebook bar UI does not
> update which button now has focus. It still displays the 'Normal' button
> with the 3d effect, this should now be flat and the effect on 'Master Slide'
> button.
> 
> 4 - Click on the 'Slide Sorter' button
> 
> result:
> The notebook bar UI updates properly and 'Slide Sorter' has the 3d effect.
> 
> 5 - Click on the 'Master Slide' button
> 
> result:
> The notebook bar UI updates properly and 'Master Slide' has the 3d effect.
> 
> 6 - Click on the 'Normal' button
> 
> result:
> The notebook bar does not update properly and the 3d effect does not change
> to the proper button.

Please elaborate what do you mean with 3d effect better with screenshot per step
Comment 3 Drew Jensen 2020-02-24 22:15:24 UTC
Created attachment 158150 [details]
Graphic which shows issue

OK - here is an image that shows the problem.

First I am again on Ubuntu 18.04, but this is using the latest LO-Dev 7.0 build.

I was trying to point out in the earlier 'how to recreate' is that the Master Slie button is only left without the visual clue that it has been selected when the user clicks on it while the Normal View button is active.

If you click on any of the other buttons first, ie Slide Sorter, and the Master View the visual clue that Master View button was selected works.

The problem works the other way also.
If the user clicks on the Normal View button while the Master View button has the highlighting then the view changes but the Normal Button does not show the highlighting. Again, if any other combination of From -> To buttons is used the highlighting works as expected.
Comment 4 QA Administrators 2022-02-24 03:36:38 UTC Comment hidden (noise)
Comment 5 Justin L 2023-06-16 18:11:48 UTC Comment hidden (no-value)
Comment 6 Justin L 2023-06-20 15:29:01 UTC Comment hidden (no-value)
Comment 7 Commit Notification 2023-06-20 23:01:45 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e321d85089fc1dd73cd1f1443a53226a25695194

tdf#122270 sd: refresh notebookbar after switch to/from master view

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.