tdf#122270 sd: refresh notebookbar after switch to/from master view

Although the state of the uno items was changing,
the notebookbar was not refreshing to display the new state.

Change-Id: Ifda5e6dcfa1d569ba75d0c94cdf0bc94c63977d5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153360
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>